# aisuite

./: .env.sample  .gitignore  README.md  pyproject.toml
aisuite/: client.py
aisuite/framework/: __init__.py  create_embedddings_response.py  embedding.py
aisuite/providers/: aws_provider.py  azureopenai_provider.py  baidu_provider.py  centml_provider.py  huggingface_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  sambanova_provider.py  tongyi_provider.py  vllm_provider.py  xai_provider.py
examples/: client.ipynb
examples/chat-ui/: README.md  gradio-chat.py
guides/: README.md  aws.md  baidu.md  centml.md  ollama.md  openai.md  openrouter.md  sambanova.md  tongyi.md  xai.md
tests/client/: test_client.py
tests/providers/: test_baidu_provider.py  test_centml_provider.py  test_ollama_provider.py  test_tongyi_provider.py
