[tool.poetry]
name = "aisuite"
version = "0.1.6"
description = "Uniform access layer for LLMs"
authors = ["Andrew Ng"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anthropic = { version = "^0.40.0", optional = true }
boto3 = { version = "^1.34.144", optional = true }
vertexai = { version = "^1.71.1", optional = true }
groq = { version = "^0.13.0", optional = true }
mistralai = { version = "^1.2.5", optional = true }
openai = { version = "^1.57.0", optional = true }

# Optional dependencies for different providers
httpx = "~0.27.0"
[tool.poetry.extras]
anthropic = ["anthropic"]
aws = ["boto3"]
azure = []
google = ["vertexai"]
groq = ["groq"]
huggingface = []
mistral = ["mistralai"]
ollama = []
openai = ["openai"]
all = ["anthropic", "aws", "google", "groq", "mistral", "openai"]  # To install all providers

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
python-dotenv = "^1.0.1"
openai = "^1.57.0"
groq = "^0.13.0"
anthropic = "^0.40.0"
notebook = "^7.2.1"
ollama = "^0.4.0"
mistralai = "^1.2.5"
boto3 = "^1.34.144"
fireworks-ai = "^0.14.0"
chromadb = "^0.5.4"
sentence-transformers = "^3.0.1"
datasets = "^2.20.0"
vertexai = "^1.71.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths="tests"
addopts=[
    "--cov=aisuite",
    "--cov-report=term-missing"
]
